--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="utf-8">
-	<title>Midterm</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<title>Open LIbrary</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" type="text/css" href="css/app.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-	<script type="text/javascript" src="js/styles.js"></script>
-	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 </head>
-
 <body>
-	<div class ="container">
-	<div class="jumbotron">
-		<h1>Midterm</h1>
+	<div class="container">
+		<div class="jumbotron">
+			<h1>Open Library</h1>
+			<p>Please enter the number of random images you'd like to generate</p>
+			<form action="/" method="post" onsubmit="buildGallery(); return false;">
+				<div class="form-group row">
+					<label for="number-images" class="col-sm-2 col-form-label">ISBN</label>
+					<div class="col-sm-4">
+						<input type="text" class="form-control" id="isbn" placeholder="#########" required>
+					</div>
+					<div class="col-sm-6">
+						<button type="submit"  id= "query" class="btn btn-primary">Query</button>
+					</div>
+				</div>
+			</form>
+		</div>	
+		<div class="cover"></div>
+		<div class="info"></div>
 	</div>
-
-
-
-</div> <!-- closes div for container -->
 </body>
 </html>
